; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_proc_usynch_get_requested_thread_qos.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_proc_usynch_get_requested_thread_qos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uthread = type { i32 }

@TASK_POLICY_ATTRIBUTE = common dso_local global i32 0, align 4
@TASK_POLICY_QOS = common dso_local global i32 0, align 4
@THREAD_QOS_UNSPECIFIED = common dso_local global i32 0, align 4
@THREAD_QOS_USER_INTERACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uthread*)* @proc_usynch_get_requested_thread_qos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_usynch_get_requested_thread_qos(%struct.uthread* %0) #0 {
  %2 = alloca %struct.uthread*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.uthread* %0, %struct.uthread** %2, align 8
  %5 = load %struct.uthread*, %struct.uthread** %2, align 8
  %6 = icmp ne %struct.uthread* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.uthread*, %struct.uthread** %2, align 8
  %9 = getelementptr inbounds %struct.uthread, %struct.uthread* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  br label %13

11:                                               ; preds = %1
  %12 = call i32 (...) @current_thread()
  br label %13

13:                                               ; preds = %11, %7
  %14 = phi i32 [ %10, %7 ], [ %12, %11 ]
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @TASK_POLICY_ATTRIBUTE, align 4
  %17 = load i32, i32* @TASK_POLICY_QOS, align 4
  %18 = call i32 @proc_get_thread_policy(i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @THREAD_QOS_UNSPECIFIED, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %13
  %23 = load i32, i32* @THREAD_QOS_USER_INTERACTIVE, align 4
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %22, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @current_thread(...) #1

declare dso_local i32 @proc_get_thread_policy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
